--- a/Ayudantias/Ayudantia1_IntroduccionPython.ipynb
+++ b/Ayudantias/Ayudantia1_IntroduccionPython.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joseeegalaz/Ayudantias-IIQ3402-2025-1/blob/main/Ayudantias/Ayudantia1_IntroduccionPython.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "BzWHtoHb7nXq"
       },
       "source": [
@@ -370,10 +380,10 @@
       "execution_count": 7,
       "metadata": {
         "id": "wXERFgSrXUTT",
-        "outputId": "01d76697-0ff3-421b-d0ba-27d1caedef7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "01d76697-0ff3-421b-d0ba-27d1caedef7d"
       },
       "outputs": [
         {
@@ -397,12 +407,12 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YzjviYAQkw8A",
-        "outputId": "61281d48-a302-46e7-f1ae-ddffb91283f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "YzjviYAQkw8A",
+        "outputId": "61281d48-a302-46e7-f1ae-ddffb91283f4"
       },
       "execution_count": 5,
       "outputs": [
@@ -751,6 +761,15 @@
         "else:\n",
         "    print(f'{numero} es impar')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se usa el = para definir variables, e == para condiciones de igualdas"
+      ],
+      "metadata": {
+        "id": "4tZRQ7C0oqsY"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1699,6 +1718,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Hay que buscar la documentación de cada paquete para encontrar los detalles"
+      ],
+      "metadata": {
+        "id": "LtwnlGaorxsA"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "JcXGS86KcU0_"
       },
@@ -1712,7 +1740,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
