--- a/Ayudantias/Ayudantia1_IntroduccionPython.ipynb
+++ b/Ayudantias/Ayudantia1_IntroduccionPython.ipynb
@@ -1727,6 +1727,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Tree regression -> Arbol de regresion se puede hacer en Python"
+      ],
+      "metadata": {
+        "id": "LctR6icdtH7f"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "JcXGS86KcU0_"
       },
